--- a/package.json
+++ b/package.json
@@ -9,16 +9,75 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
+    "@axe-core/react": "^4.4.3",
+    "@babel/plugin-proposal-do-expressions": "^7.18.6",
+    "@testing-library/react-hooks": "^8.0.1",
+    "axios": "^0.27.2",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-transform-scss": "^1.1.0",
+    "bulma": "^0.9.4",
+    "classnames": "^2.3.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "html-react-parser": "^3.0.2",
+    "husky-init": "^8.0.0",
+    "jest-axe": "^6.0.0",
+    "jest-environment-jsdom": "^28.1.3",
+    "module-alias": "^2.2.2",
+    "next": "12.2.3",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.54.2",
+    "stylelint": "^14.9.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.3.0",
+    "stylelint-webpack-plugin": "^3.3.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@types/node": "18.7.16",
-    "@types/react": "18.0.18",
+    "@babel/core": "^7.18.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/cli": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@types/node": "^18.6.3",
+    "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0",
-    "typescript": "4.8.3"
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "babel-jest": "^28.1.3",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "12.2.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-storybook": "^0.6.3",
+    "husky": "^8.0.0",
+    "jest": "^28.1.3",
+    "msw": "^0.44.2",
+    "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "typescript": "4.7.4"
   }
 }
