--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"]
   },
   "parser": "@typescript-eslint/parser",
+  "ignorePatterns": ["**/*.config.js", "**/*.setup.js"],
   "parserOptions": {
     "project": ["./tsconfig.json"],
     "ecmaFeatures": {
