--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "typescript": "4.7.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
