--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@axe-core/react": "^4.4.3",
     "@babel/plugin-proposal-do-expressions": "^7.18.6",
     "@testing-library/react-hooks": "^8.0.1",
+    "babel-core": "7.0.0-bridge.0",
     "babel-plugin-macros": "^3.1.0",
     "babel-plugin-transform-scss": "^1.1.0",
     "bulma": "^0.9.4",
