-add molecules and atoms path to tsconfig -add atoms and molecules to main in storybook -refactor the indexes for atoms and molecules -refactor import path on atoms and molecules -add Texbox story -add styles path to _app.tsx -remove unnecessary scss module from styles file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@components": ["src/components"],
+      "@atoms": ["src/components/atoms"],
+      "@molecules": ["src/components/molecules"],
       "@types": ["src/types"],
       "@styles/*": ["src/styles/*"]
     }
