--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "^18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
