--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.1",
     "sass": "^1.54.2",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@hookform/resolvers": "^2.9.8",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
@@ -87,7 +89,8 @@
     "react-test-renderer": "^18.2.0",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "yup": "^0.32.11"
   },
   "msw": {
     "workerDirectory": "public"
